# openmc_renderer

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  plotter.h  render.h  shaders.h
opengl_ex/: CMakeLists.txt  cube.cpp
test/: plots.xml
test/pin/: plots.xml
test/triso/: model.xml
